# rust_edu

./: .gitignore
algorithm/bind_search/: Cargo.toml
algorithm/bind_search/src/: main.rs
algorithm/quicksort/src/: main.rs
cargo_io_edu/: Cargo.toml
freenove/: Cargo.toml
kernel-driver/: Cargo.toml  build.rs  config.toml  makefile.toml
kernel-driver/src/: dbg.rs  lib.rs  ntstatus.rs  types.rs
otus/smart_home/: Cargo.toml
otus/smart_home/examples/: create_report.rs
otus/smart_home/src/: devices.rs  lib.rs  main.rs
otus/smart_home/src/devices/: device.rs  mod.rs
otus/smart_home/src/info_provider/: info_provider.rs  mod.rs
otus/smart_home/src/info_provider_mod/: info_provider.rs  mod.rs
otus/smart_home/src/smart_house_mod/: apartment.rs  mod.rs  smart_house.rs  space.rs
otus/smart_home/tests/: integration_test.rs
ownership/src/: main.rs
references/src/: main.rs
rustlings/exercises/01_variables/: variables1.rs  variables2.rs
rustlings/exercises/02_functions/: functions1.rs  functions3.rs
rustlings/exercises/03_if/: if1.rs
rustlings/exercises/04_primitive_types/: primitive_types3.rs  primitive_types4.rs
rustlings/exercises/05_vecs/: vecs1.rs
rustlings/exercises/quizzes/: quiz1.rs
std_http_request/: Cargo.toml
